[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-demo"
description = 'A demo project for learning hatching! '
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Rahul Goyal", email = "goyal.1234rahul@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []  # Spefices the runtime dependencies needed for the project
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/rahul26goyal/hatch-demo/docs"
Issues = "https://github.com/rahul26goyal/hatch-demo/issues"
Source = "https://github.com/rahul26goyal/hatch-demo"

[tool.hatch.version]
path = "hatch_demo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hatch_demo --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests"
]

[tool.hatch.build.targets.wheel]
packages = ["hatch_demo"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "hatch_demo/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
